3. Класс хранилища пользователей UserStorage [#1104 #316976]